--- a/ActiTime/pom.xml
+++ b/ActiTime/pom.xml
@@ -11,7 +11,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>testActiTime.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
